--- a/ionic-angular-project-booking/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/ionic-angular-project-booking/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offer-bookings</ion-title>
+    <ion-back-button slot="start" defaultHref="/places/tabs/offers"></ion-back-button>
+    <ion-title>{{ place?.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-button color="primary" [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place?.id]">Edit</ion-button>
 </ion-content>
