--- a/ionic-angular-project-booking/src/app/places/offers/offers.page.html
+++ b/ionic-angular-project-booking/src/app/places/offers/offers.page.html
@@ -1,9 +1,35 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>offers</ion-title>
+    <ion-title>Offers</ion-title>
+<!--    slot=primary -> end of toolbar -->
+    <ion-buttons slot="primary" routerLink="/places/offers/new">
+      <ion-icon name="add" slot="icon-only"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2">
+        <ion-list>
+          <!--          takes all the places after the featured one, thus the first place -->
+          <!-- detail can be put to show a little arrow inducing that you can click on the item -->
+          <ion-item
+                  *ngFor="let offer of loadedOffers"
+                  [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
+                  detail>
+            <!-- squared image box-->
+            <ion-thumbnail slot="start">
+              <ion-img [src]="offer.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{ offer.title }}</h2>
+              <p>{{ offer.description }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
