--- a/ionic-angular-project-booking/src/app/places/discover/discover.page.html
+++ b/ionic-angular-project-booking/src/app/places/discover/discover.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+      <ion-buttons>
+          <ion-menu-button menu="m1"></ion-menu-button>
+      </ion-buttons>
     <ion-title>Discover places</ion-title>
   </ion-toolbar>
 </ion-header>
