--- a/ionic-angular-project-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/ionic-angular-project-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-button slot="start">
-      <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
-    </ion-button>
-    <ion-title>Place detail</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-button slot="start">
+            <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
+        </ion-button>
+        <ion-title>{{ place.title }}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
+    <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
 </ion-content>
