--- a/ionic-angular-project-booking/src/app/places/offers/offers.page.html
+++ b/ionic-angular-project-booking/src/app/places/offers/offers.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons>
+      <ion-menu-button menu="m1"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Offers</ion-title>
 <!--    slot=primary -> end of toolbar -->
     <ion-buttons slot="primary" routerLink="/places/offers/new">
