--- a/ionic-angular-project-booking/src/app/bookings/bookings.page.html
+++ b/ionic-angular-project-booking/src/app/bookings/bookings.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="m1"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Your bookings</ion-title>
+    <ion-title>Your Bookings</ion-title>
   </ion-toolbar>
 </ion-header>
 
